Create a planet chunk loading system

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
         <!-- Libaries -->
         <script src="js/pixi.js"></script>
+        <script src="js/decomp.js"></script>
         <script src="js/matter.js"></script>
 
         <!-- Init script -->
