--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
 
     <body onload="init()">
         <canvas id="canvas" width="100%" height="100%"></canvas>
+        <div id="ui-overlay" class="ui-overlay"></div>
     </body>
 </html>
