--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,16 @@
     </head>
 
     <body onload="init()">
+        <!-- Main canvas, convers the entire screen. Is rendered onto by a
+             PIXI.js renderer in the main game
+         -->
         <canvas id="canvas" width="100%" height="100%"></canvas>
+
+        <!-- UI Overlay div. UI is created by adding HTML elements to this div,
+             which is the same size and occupies the same space as the canvas.
+             This is rendered above the canvas, so anything added to this
+             will show above any canvas graphics
+         -->
         <div id="ui-overlay" class="ui-overlay"></div>
     </body>
 </html>
