Begin work on editor

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <!-- Libaries -->
         <script src="js/pixi.js"></script>
         <script src="js/decomp.js"></script>
-        <script src="js/matter.js"></script>
+        <script src="js/matter.js.min"></script>
 
         <!-- Init script -->
         <script src="../src/init.js"></script>
