--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <!-- Main canvas, convers the entire screen. Is rendered onto by a
              PIXI.js renderer in the main game
          -->
-        <canvas id="canvas" width="100%" height="100%"></canvas>
+        <canvas id="canvas" width="100%" height="100%" style="z-index: -999;"></canvas>
 
         <!-- UI Overlay div. UI is created by adding HTML elements to this div,
              which is the same size and occupies the same space as the canvas.
