Fix require logic in init.js

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
         <link rel="stylesheet" href="css/index.css">
 
         <!-- Libaries -->
+        <!-- TODO: make these npm modules -->
         <script src="js/decomp.js"></script>
         <script src="js/pixi.js"></script>
         <script src="js/matter.js.min"></script>
 
         <!-- Init script -->
-        <script src="../src/init.js"></script>
+        <script>require('../src/init.js')</script>
     </head>
 
     <body onload="init()">
