--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,20 @@
 
         <!-- Init script -->
         <script>require('../src/init.js')</script>
+
+        <!-- TEMP TODO REMOVE -->
+        <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+        <style>
+        body {
+            font-family: 'Oxygen', sans-serif;
+            font-size: 12px;
+        }
+        </style>
     </head>
 
     <body onload="init()">
