Rotation + editor rewrite

--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,8 @@
              will show above any canvas graphics
          -->
         <div id="ui-overlay" class="ui-overlay"></div>
+
+        <!-- Fadeable caption text. Small caption to display things like "Shortcut enabled" -->
+        <div id="caption-text" class="fadeable caption noselect"></div>
     </body>
 </html>
